--- a/modules/event_log/locale/fr_FR.po
+++ b/modules/event_log/locale/fr_FR.po
@@ -18,6 +18,10 @@ msgctxt "field:event.log,date:"
 msgid "Date"
 msgstr "Date"
 
+msgctxt "field:event.log,date_str:"
+msgid "Date"
+msgstr "Date"
+
 msgctxt "field:event.log,description:"
 msgid "Description"
 msgstr "Description"
