--- a/modules/contract_term_renewal/locale/fr_FR.po
+++ b/modules/contract_term_renewal/locale/fr_FR.po
@@ -8,8 +8,8 @@ msgid ""
 "at %(start_date)s . Are you sure you want to prevent renewal after "
 "%(end_date)s ?"
 msgstr ""
-"Le contrat %(contract_number)s a déjà été renouvellé, avec une nouvelle date "
-"d'effet au %(start_date)s . Êtes-vous sûr de vouloir décliner le "
+"Le contrat %(contract_number)s a déjà été renouvellé, avec une nouvelle date"
+" d'effet au %(start_date)s . Êtes-vous sûr de vouloir décliner le "
 "renouvellement après le %(end_date)s ? "
 
 msgctxt "field:contract,is_renewable:"
@@ -19,6 +19,10 @@ msgstr "Est renouvelable"
 msgctxt "field:contract.activation_history,final_renewal:"
 msgid "Final Renewal"
 msgstr "Renouvellement final"
+
+msgctxt "field:contract.renew,id:"
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:contract_term_renewal.decline_renewal.select_reason,contract:"
 msgid "Contract"
@@ -32,6 +36,66 @@ msgctxt "field:contract_term_renewal.decline_renewal.select_reason,reason:"
 msgid "Reason"
 msgstr "Raison"
 
+msgctxt "field:offered.product,term_renewal_rule:"
+msgid "Term Renewal Rule"
+msgstr "Règle de terme/renouvellement"
+
+msgctxt "field:offered.product.term_renewal_rule,allow_renewal:"
+msgid "Allow Renewal"
+msgstr "Permettre le renouvellement"
+
+msgctxt "field:offered.product.term_renewal_rule,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:offered.product.term_renewal_rule,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:offered.product.term_renewal_rule,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:offered.product.term_renewal_rule,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
+
+msgctxt "field:offered.product.term_renewal_rule,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:offered.product.term_renewal_rule,product:"
+msgid "Product"
+msgstr "Produit"
+
+msgctxt "field:offered.product.term_renewal_rule,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:offered.product.term_renewal_rule,rule:"
+msgid "Rule Engine"
+msgstr "Moteur de Règle"
+
+msgctxt "field:offered.product.term_renewal_rule,rule_extra_data:"
+msgid "Rule Extra Data"
+msgstr "Paramètres de Rêgle"
+
+msgctxt "field:offered.product.term_renewal_rule,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:offered.product.term_renewal_rule,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:offered.product.term_renewal_rule,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "model:contract.renew,name:"
+msgid "Contracts Renewal Batch"
+msgstr "Batch de renouvellement de contrats"
+
 msgctxt "model:contract_term_renewal.decline_renewal.select_reason,name:"
 msgid "Reason selector to decline renewal"
 msgstr "Sélecteur de raison pour la déclinaison de renouvellement"
@@ -43,6 +107,10 @@ msgstr "Décliner le renouvellement de contrat"
 msgctxt "model:ir.action,name:act_renew"
 msgid "Renew Contract"
 msgstr "Renouveller le contrat"
+
+msgctxt "model:offered.product.term_renewal_rule,name:"
+msgid "Product Term Renewal Rule"
+msgstr "Règle de terme/renouvellement"
 
 msgctxt "model:rule_engine,name:product_term_renewal_sync_given_date"
 msgid "Product Term Renewal In Sync With Given Date"
@@ -153,6 +221,10 @@ msgstr "Jour donné"
 msgctxt "model:rule_engine.rule_parameter,string:given_month"
 msgid "Given Month"
 msgstr "Mois donné"
+
+msgctxt "selection:rule_engine,type_:"
+msgid "Renewal"
+msgstr "Renouvellement"
 
 msgctxt "view:contract:"
 msgid "Decline Renewal"
