--- a/modules/commission_multi_agents/CHANGELOG
+++ b/modules/commission_multi_agents/CHANGELOG
@@ -1,2 +1,4 @@
+* Add information to differentiate second level commission to prevent picking such agent on a contract
+
 Version 1.3 - 2015-01-22
 * Module creation
