--- a/modules/commission_insurance_rule_engine/CHANGELOG
+++ b/modules/commission_insurance_rule_engine/CHANGELOG
@@ -1,3 +1,4 @@
+* Add extra data on agent to be used with the rule engine
 * Allow to configure the commission formula with the rule engine
 
 Version 1.3 - 2015-01-22
