commission_insurance: Allow to cancel commission invoice Fix #1807: https://redmine.coopengo.com/issues/1807 http://rietveld.coopengo.com/10370001

--- a/modules/commission_insurance/CHANGELOG
+++ b/modules/commission_insurance/CHANGELOG
@@ -1,3 +1,4 @@
+* Allow to cancel commission invoice
 * Add broker fee management
 * Automatic payment generation for broker based on configuration
 
