endorsement : use rtf for summary, split info generation and formatting fix #1772 fix #1773 http://rietveld.coopengo.com/11350001/

--- a/modules/endorsement/CHANGELOG
+++ b/modules/endorsement/CHANGELOG
@@ -1,3 +1,4 @@
+* Use rich text format for endorsement summary
 * Add void endorsement
 * Make endorsement printable
 * Add terminate_contract endorsement
