--- a/modules/contract_insurance_document_request/CHANGELOG
+++ b/modules/contract_insurance_document_request/CHANGELOG
@@ -1,3 +1,5 @@
+* Use Rule Mixin feature to implement documents rules
+
 Version 1.3 - 2015-01-22
 * Allow to import / export attachments on contract
 * module creation
