all : change domain and context syntax in xml files for 1.4 fix #1863 http://rietveld.coopengo.com/7940001/

--- a/modules/account_cog_translation/locale/fr_FR.po
+++ b/modules/account_cog_translation/locale/fr_FR.po
@@ -77,7 +77,7 @@ msgstr ""
 msgctxt "error:account.move.reconciliation:account."
 msgid ""
 "You can not reconcile line \"%(line)s\" because it's party \"%(party1)s\" is"
-" different from %(party2)s\"."
+" different from \"%(party2)s\"."
 msgstr ""
 "Vous ne pouvez lettrer la ligne « %(line)s »  car son tiers « %(party1)s » "
 "est différent de « %(party2)s »."
